tests/fails/f36.t
local aa = { b = 4}
terra foo()
  return aa.a
end
foo()
